--- a/Hackathon.ipynb
+++ b/Hackathon.ipynb
@@ -631,21 +631,15 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Danish\\AppData\\Local\\Temp\\ipykernel_15252\\106848794.py:4: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  df['order_date'] = pd.to_datetime(df['order_date'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"final_food_delivery_dataset.csv\")\n",
-    "df['order_date'] = pd.to_datetime(df['order_date'])\n"
+    "df['order_date'] = pd.to_datetime(\n",
+    "    df['order_date'],\n",
+    "    format='%d-%m-%Y'\n",
+    ")\n"
    ]
   },
   {
@@ -735,18 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "86663042-8a03-4124-b20b-67785650e136",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Danish\\AppData\\Local\\Temp\\ipykernel_15252\\2805884943.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df.groupby('rating_range')['total_amount'] \\\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -758,7 +744,7 @@
        "Name: total_amount, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +755,7 @@
     "\n",
     "df['rating_range'] = pd.cut(df['rating'], bins=bins, labels=labels)\n",
     "\n",
-    "df.groupby('rating_range')['total_amount'] \\\n",
+    "df.groupby('rating_range', observed=True)['total_amount'] \\\n",
     "  .sum() \\\n",
     "  .sort_values(ascending=False)\n"
    ]
@@ -1116,9 +1102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
